# tabletop

./: .gitignore  Cargo.toml  TODO  build.sh  index.html  tabletop.js
.github/actions/: rust.yml
.github/workflows/: rust.yml
src/: camera.rs  debug.rs  main.rs  setup.rs  socket.rs  ui.rs
www/: index.html  server.py
