[package]
name = "tabletop"
version = "0.1.0"
authors = ["Robin Toncourt <robin.toncourt@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[dependencies]
bevy = "0.17.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = "debuginfo"
overflow-checks = false
