[package]
name = "tabletop"
version = "0.1.0"
authors = ["Robin Toncourt <robin.toncourt@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[dependencies]
bevy = "0.17.2"
bevy_ggrs = { version = "0.19", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.13", features = ["ggrs"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = "debuginfo"
overflow-checks = false
